# ML4SE-toolkit

./: .gitignore  AGENTS.md  Makefile  README.md  batch_directory_analysis.py  convert_parquet_to_jsonl.py  plot_results_treemap.py  pyproject.toml  requirements.txt  test_rule_scoring.py
.github/workflows/: ci.yml  publish.yml
Parsing/: Query.py  main.py
Parsing/Code/: LanguageParser.py  Loader.py  TreeQuery.py  TreeSitterQuery.py  demo.ipynb
Parsing/Comments/: CommentQuery.py
docs/: architecture.md  comment_extractor.md  comment_syntax_matrix.md  comment_syntax_stack_v2.md  git_workflow.md
docs/comment_research/: README.md  agent_chunk_assignments.json  chunk_0_nonalpha_a_report.md  chunk_1_b_c_report.md  chunk_2_d_f_report.md  chunk_3_g_i_report.md  chunk_4_j_m_report.md  chunk_5_n_p_report.md  chunk_6_q_s_report.md  chunk_7_t_z_report.md  confirmation_report_template.md  implementation_confirmation_playbook.md  not_done_backlog.csv  not_done_backlog.md  online_research_playbook.md  registry_ready_candidates.csv  registry_ready_candidates.md  report_template.md  stackv2_public_language_inventory.csv
docs/comment_testing/: README.md  adversarial_playbook.md  agent_chunk_assignments.json  sanitizer_playbook.md  stack_v2_judge_validation_ledger.md  stack_v2_judge_workflow.md  thread_template.md
examples/: parsing_and_generation.py
scripts/: build_comment_confirmation_packets.py  build_comment_language_fixtures.py  build_comment_research_packets.py  build_comment_research_views.py  build_comment_test_packets.py  build_stack_v2_comment_judge_cases.py  check_main_branch_policy.py  check_release_version.py  comment_judge_limits.py  comment_judge_validation_ledger.py  run_codex_comment_judge.py  run_codex_comment_test_generator.py  run_local_comment_judge.py  run_stack_v2_comment_judge_pipeline.sh
src/SATD/: README.md  SATDDetector.py  requirements.txt
tests/: test_codex_comment_judge.py  test_comment_candidate_cases.py  test_comment_generated_cases.py  test_comment_judge_validation_ledger.py  test_comment_language_fixtures.py  test_comment_queries.py  test_comment_registry.py  test_comment_sanitizer.py  test_comment_test_generation_agent.py  test_generation.py  test_iterable_query_loader.py  test_local_comment_judge.py  test_main_branch_policy.py  test_package_api.py  test_parse_comment.py  test_release_version_check.py  test_smoke.py  test_stack_v2_comment_judge.py  test_stack_v2_comment_judge_pipeline.py  test_stack_v2_comment_manifest_generator.py  test_stack_v2_comment_regressions.py  test_stack_v2_judge_followup_group_0.py  test_stack_v2_judge_followup_group_1.py  test_stack_v2_judge_followup_group_10.py  test_stack_v2_judge_followup_group_13.py  test_stack_v2_judge_followup_group_14.py  test_stack_v2_judge_followup_group_2.py  test_stack_v2_judge_followup_group_3.py  test_stack_v2_judge_followup_group_4.py  test_stack_v2_judge_followup_group_5.py  test_stack_v2_judge_followup_group_6.py  test_stack_v2_judge_followup_group_7.py  test_stack_v2_sanitizer_sanitation_failures.py  test_tree_sitter_optional.py
(+1180 files in other folders)
